# LiteRT-Project

./: .gitignore  README.md  compile.bat  requirements.txt  run.bat
models/: converted_models.h  converter.py
models/model_result/model_0/: converted_model.cc  converted_model.tflite  model_0_data.cc  model_0_data.h
models/model_result/model_1/: converted_model.cc  converted_model.tflite  model_1_data.cc  model_1_data.h
models/model_result/model_2/: converted_model.cc  converted_model.tflite  model_2_data.cc  model_2_data.h
models/model_result/model_3/: converted_model.cc  converted_model.tflite  model_3_data.cc  model_3_data.h
models/model_result/model_4/: converted_model.cc  converted_model.tflite  model_4_data.cc  model_4_data.h
models/model_result/model_5/: converted_model.cc  converted_model.tflite  model_5_data.cc  model_5_data.h
models/model_result/model_6/: converted_model.cc  converted_model.tflite  model_6_data.cc  model_6_data.h
models/model_result/model_7/: converted_model.cc  converted_model.tflite  model_7_data.cc  model_7_data.h
models/model_result/model_8/: converted_model.cc  converted_model.tflite  model_8_data.cc  model_8_data.h
models/model_result/model_9/: converted_model.cc  converted_model.tflite  model_9_data.cc  model_9_data.h
models/model_test/model_0/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/model_test/model_0/variables/: variables.data-00000-of-00001  variables.index
models/model_test/model_1/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/model_test/model_1/variables/: variables.data-00000-of-00001  variables.index
models/model_test/model_2/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/model_test/model_2/variables/: variables.data-00000-of-00001  variables.index
models/model_test/model_3/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/model_test/model_3/variables/: variables.data-00000-of-00001  variables.index
models/model_test/model_4/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/model_test/model_4/variables/: variables.data-00000-of-00001  variables.index
models/model_test/model_5/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/model_test/model_5/variables/: variables.data-00000-of-00001  variables.index
models/model_test/model_6/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/model_test/model_6/variables/: variables.data-00000-of-00001  variables.index
models/model_test/model_7/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/model_test/model_7/variables/: variables.data-00000-of-00001  variables.index
models/model_test/model_8/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/model_test/model_8/variables/: variables.data-00000-of-00001  variables.index
models/model_test/model_9/: fingerprint.pb  keras_metadata.pb  saved_model.pb
models/model_test/model_9/variables/: variables.data-00000-of-00001  variables.index
testing/: CMakeLists.txt  load_model.py  main.cpp  main.py  resource_usage.py
testing/results/: results_0.txt  results_1.txt  results_2.txt  results_3.txt  results_4.txt  results_5.txt  results_6.txt  results_7.txt  results_8.txt  results_9.txt
